--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ section .title{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'poppins', sans-serif;
 }
 section .title::before{
     content: "";
@@ -312,6 +312,10 @@ section .title::after{
    
     background-image: url(bg.png);
 }
+.about .title{
+    color: #fff;
+    font-family: poppins;
+}
  /* My suit section */
  .suit, .projects{
     color: #fff;
@@ -362,6 +366,7 @@ section .title::after{
 .suit .vide-content .card img{
     size: 10px;
 }
+
     /* footer secton */
     footer{
         background: rgb(0, 0, 0);
@@ -379,7 +384,221 @@ section .title::after{
         color: #fff;
     }
 
-
-
- 
-
+    /*responsive media query start */
+    @media (max-width: 1300px){
+        .home .max-width{
+            margin-left: 0px;
+        }
+    }
+    @media (max-width: 1104px){
+        .about .about-content .left img{
+            height: 350px;
+            width: 350px;
+        
+        }
+    
+    }
+    @media (max-width: 991px) {
+        .max-width{
+            padding: 0 50px;
+        }
+    }
+    
+    @media (max-width: 1104px){
+        .time .max-width img{
+            height: 500px;
+            width: 950px;
+        
+        }
+    
+    }
+    @media (max-width: 1104px){
+        .about .max-width .column-right{
+           left: 30rem;
+           
+        
+        }
+    
+    }
+    @media (max-width: 1104px){
+        .suit .max-width .box img{
+           width: 250px;
+           
+        
+        }
+    
+    }
+    @media (max-width: 1104px){
+        .about .max-width .column-right{
+           width: 510px;
+           height: 385px;
+           
+        
+        }
+    
+    }
+    @media (max-width: 947px){
+        .menu-btn{
+            display: block;
+            z-index: 999;
+        }
+        .menu-btn i.active::before{
+            content: "\f00d";
+        }    
+        .navbar .menu{
+            position: fixed;
+            height: 100vh;
+            width: 100%;
+            left: -100%;
+            top: 0;
+            background: rgb(0, 0, 0);
+            text-align: center;
+            padding-top: 80px;
+            transition: all 0.5s ease;
+    
+        }
+        .navbar .menu.active{
+            left: 0;
+       
+        }
+        .navbar .menu li{
+            display: block;
+        }
+        .navbar .menu li a{
+            display: inline-block;
+            margin: 20px 0;
+            font-size: 25px;
+        }
+        .home .home-content .text-2{
+            font-size: 70px;
+        }
+        .home .home-content .text-3{
+            font-size: 35px;
+        }
+        .home .home-content a{
+            font-size: 23px;
+            padding: 10px 30px;
+        }
+             
+    .max-width{
+        max-width: 800px;
+    }
+    .max-width{
+        max-width: 800px;
+    }
+    .about .about-content .column, .about2 .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left, .about2 .about-content .left {
+       display: flex;
+       justify-content: center;
+       margin: 0 auto 60px;
+       }
+       .about .about-content .right, .about2 .about-content .right{
+          flex:100%;
+       }
+       .hobbies .Hobb-content .card{
+           width: calc(50% - 10px);
+           margin-bottom: 20px;
+    
+       }
+       .skills .skills-content .column,
+       .contact .contact-content .column{
+           width: 100%;
+           margin-bottom: 35px;
+       }
+        .about .max-width .column-right{
+           width: 20px;
+           height: 500px;
+           
+        
+        }
+        .about2 .max-width .column-right{
+            width: 20px;
+            height: 500px;
+            
+         
+         }
+       
+    
+    }
+    @media (max-width: 947px){
+        .suit .max-width .box img{
+           width: 170px;
+           
+        
+        }
+    }
+    @media (max-width: 947px){
+        .time .max-width img{
+            height: 500px;
+            width: 700px;
+        
+        }
+    
+    }
+    @media (max-width: 690px) {
+        .max-width{
+            padding: 0 23px;
+        }
+    .home .home-content .text-2{
+            font-size: 60px;
+        }
+        .home .home-content .text-3{
+            font-size: 32px;
+        }
+        .home .home-content a{
+            font-size: 20px;
+        }
+        .hobbies .Hobb-content .card{
+            width: 100%;
+        }
+        .time .max-width img{
+            height: 500px;
+            width: 640px;
+        
+        }
+        .suit .max-width .box img{
+            width: 150px;
+            
+         
+         }
+    }
+    @media (max-width: 500px) {
+        .home .home-content .text-2{
+                font-size: 50px;
+            }
+            .home .home-content .text-3{
+                font-size: 27px;
+            }
+            .suit .max-width .box img{
+                width: 90px;
+                
+             
+             }
+             .time .max-width img{
+                height: 500px;
+                width: 450px;
+            
+            }
+           
+                .about .max-width .column-right iframe{
+                   width: 450px;
+                   height: 305px;
+                  
+                 
+                
+                }
+                .about .max-width .column-right{
+                    width: 390px;
+                    height: 305px;
+                   
+                  
+                 
+                 }
+             
+            
+        }
+    
+    
+    
